meja/tests/list_wrong_type.stderr
File "tests/list_wrong_type.meja", line 3, characters 16-17:
Error: Incompatible types list(bool) and list(int):
       Cannot unify bool and int
